<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.15">
  <POU Name="FB_BaseStation" Id="{9cbe06d4-36ed-4e19-8636-f06f6ed53125}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_BaseStation IMPLEMENTS I_WorkingStation
VAR_IN_OUT
	fbTableControl: FB_TableControl;
END_VAR
VAR_INPUT
	bSimulationON:BOOL;
END_VAR
VAR_OUTPUT
END_VAR
VAR
	bRotationInterlock: BOOL;
	bRotationRequest: BOOL;
	fbTablePlace: REFERENCE TO FB_TablePlace;
	bError: BOOL;
	udiErrorNumber:UDINT;
	bManualModeRequest: BOOL;
	bManualModeActive: BOOL;
	iWorkStep: UINT;
	fbStepTON:TON;
	iLastStep: INT;
	bRefError:BOOL:=TRUE;
	iStationId:USINT;
	sStationName:STRING;
END_VAR

VAR CONSTANT
	WAIT_STEP:UINT:=10;
	ERROR_STEP:UINT:=90;
	MANUAL_STEP:UINT:=80;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[//Step Timer		
IF iLastStep <> iWorkStep THEN
	fbStepTON(IN:=FALSE,PT:=T#0S);
END_IF
fbStepTON(IN:=fbStepTON.PT >T#0S);
iLastStep := iWorkStep;

//Brak referencji - błąd pozycji
IF bRefError AND iWorkStep > WAIT_STEP AND iWorkStep < ERROR_STEP AND iWorkStep <> MANUAL_STEP AND NOT __ISVALIDREF(fbTablePlace) THEN
	mSetError(nTable_ErrorList.TablePositionError);	
END_IF

bRotationRequest R= iWorkStep<>WAIT_STEP;
bManualModeActive := iWorkStep=MANUAL_STEP;]]></ST>
    </Implementation>
    <Method Name="mErrorReset" Id="{307c245a-308f-4b3e-a89f-a5e87dd8cc62}">
      <Declaration><![CDATA[METHOD mErrorReset : BOOL
VAR_INPUT
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[bError := FALSE;
udiErrorNumber := 0;
iWorkStep:=91;]]></ST>
      </Implementation>
    </Method>
    <Method Name="mSetError" Id="{fb83016a-aaa2-4dd7-8f9c-2795ee415507}">
      <Declaration><![CDATA[METHOD mSetError : BOOL
VAR_INPUT
	udiErrorNumberSet: UDINT;
END_VAR
]]></Declaration>
      <Implementation>
        <ST><![CDATA[udiErrorNumber := udiErrorNumberSet;
bError := TRUE;
iWorkStep:=90;]]></ST>
      </Implementation>
    </Method>
    <Property Name="pError" Id="{b0d60995-960d-478b-b068-43a1eebae1e8}">
      <Declaration><![CDATA[PROPERTY pError : BOOL]]></Declaration>
      <Get Name="Get" Id="{9f3de2f4-5df4-435d-80fb-a907e1adb63f}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[pError := bError;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="pErrorNumber" Id="{d80a4a1f-6932-4311-bb5a-0f21cc367d92}">
      <Declaration><![CDATA[PROPERTY pErrorNumber : UDINT]]></Declaration>
      <Get Name="Get" Id="{062d2237-59a2-40b7-81f2-ad808ac10adf}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[pErrorNumber:= udiErrorNumber;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="prTableRotationInterlock" Id="{e5fc254a-5609-4be3-84a7-f8c244dac0b1}">
      <Declaration><![CDATA[{attribute 'monitoring' := 'call'}
PROPERTY prTableRotationInterlock : BOOL
]]></Declaration>
      <Get Name="Get" Id="{b7a6cd8a-205a-4ef0-80ee-061e503f9f54}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[prTableRotationInterlock := bRotationInterlock;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{dd4a82e4-3071-4331-955b-6cba30b3edf6}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[bRotationInterlock := prTableRotationInterlock;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <Property Name="prTableRotationRequest" Id="{4f6b0926-f186-40fb-a73a-e615918a2a53}">
      <Declaration><![CDATA[{attribute 'monitoring' := 'call'}
PROPERTY prTableRotationRequest : BOOL
]]></Declaration>
      <Get Name="Get" Id="{e1c3145f-d20b-41e6-89c1-66bdfe48409e}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[prTableRotationRequest:= bRotationRequest;]]></ST>
        </Implementation>
      </Get>
    </Property>
    <Property Name="pTablePlace" Id="{88cbe737-a470-4003-9fa4-38b67688cbaf}">
      <Declaration><![CDATA[PROPERTY pTablePlace : REFERENCE TO FB_TablePlace]]></Declaration>
      <Get Name="Get" Id="{bd357123-069c-4d22-9e1c-de08e6b4f1bb}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[pTablePlace REF= fbTablePlace;]]></ST>
        </Implementation>
      </Get>
      <Set Name="Set" Id="{17bc3b84-08fa-40ff-9713-9439282169b2}">
        <Declaration><![CDATA[VAR
END_VAR
]]></Declaration>
        <Implementation>
          <ST><![CDATA[fbTablePlace REF= pTablePlace;]]></ST>
        </Implementation>
      </Set>
    </Property>
    <LineIds Name="FB_BaseStation">
      <LineId Id="30" Count="9" />
      <LineId Id="9" Count="0" />
      <LineId Id="41" Count="0" />
      <LineId Id="40" Count="0" />
      <LineId Id="85" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.mErrorReset">
      <LineId Id="11" Count="0" />
      <LineId Id="6" Count="0" />
      <LineId Id="10" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.mSetError">
      <LineId Id="5" Count="0" />
      <LineId Id="7" Count="0" />
      <LineId Id="12" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.pError.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.pErrorNumber.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.prTableRotationInterlock.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.prTableRotationInterlock.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.prTableRotationRequest.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.pTablePlace.Get">
      <LineId Id="2" Count="0" />
    </LineIds>
    <LineIds Name="FB_BaseStation.pTablePlace.Set">
      <LineId Id="2" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>